Improve emerged case investigation loop
